--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "type": "project",
+    "require": {},
     "require-dev": {
         "phpunit/phpunit": "^11.4.4"
     },
@@ -20,6 +21,5 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
-    },
-    "require": {}
+    }
 }
